changes_team_page

--- a/team.html
+++ b/team.html
@@ -123,6 +123,67 @@
               </div>
             </div>
           </div>
+          <div class="section_wrap team_wrap wf-section">
+            <div class="container w-container">
+              <div class="team_in">
+                <h1 class="section_heading uppercase s_bold text-center">OUR TEAM</h1>
+                <div class="team_body">
+                  <div class="w-layout-grid team_grid_hold">
+                    <div id="w-node-_0a4def55-fec3-cb89-1c5b-850214e903b9-96728eaa" class="team_item_wrap">
+                      <div class="member_potrait wow animate__animated animate__fadeInUp"><img src="images/rupali-min.png" loading="lazy" alt="" class="member_img">
+                        <div class="memb_desc_wrap">
+                          <div class="member_name">Rupali Modi</div>
+                          <ul role="list" class="memd_desc_info">
+                            <li class="memb_info_item">CEO, Co-founder, eLogicTech Solutions in 1999</li>
+                            <li class="memb_info_item">Bachelor’s degree in Electronics Engineering from the University of Mumbai</li>
+                            <li class="memb_info_item">Masters degree in Computer Engineering from the University of Southern California, Los Angeles</li>
+                            <li class="memb_info_item">20+ years of industry experience</li>
+                            <li class="memb_info_item">Oversee all the operations of the organization and build the business strategy with a focus on delivering real business value to our business partners</li>
+                            <li class="memb_info_item">A passionate engineer with a focus on delivering value to clients using the latest technology</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="member_landscape wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"><img src="images/tarun-min.png" loading="lazy" sizes="(max-width: 767px) 92vw, 530px" srcset="images/tarun-min-p-500.png 500w, images/tarun-min.png 533w" alt="" class="member_img member_landscape_img">
+                        <div class="memb_desc_wrap">
+                          <div class="member_name">Tarun Pakala</div>
+                          <ul role="list" class="memd_desc_info">
+                            <li class="memb_info_item">Tarun is an Electrical &amp; Electronics Engineer graduated from SRM Institute Of Science&amp; Technology with specializations in Embedded Systems, IoT, Edge Computing and Computer Vision.</li>
+                            <li class="memb_info_item">He has a natural inclination of taking a complicated problem, breaking it down to its base level, and then coming up with a solution. This makes him an expert at assessing risk and opportunity when making the hundreds of decisions required to move from a vision to a physical product that customers find useful and businesses can manufacture.</li>
+                            <li class="memb_info_item">Given his broad technical expertise to architect systems that involve intelligent machines within projects, clients and staff rely on Tarun’s strategic thinking to guide the full suite of development and manufacturing oriented product decisions.</li>
+                            <li class="memb_info_item">He is currently reimagining the process to deliver outsized value on tight timelines to our clients. By defining a new approach to Agile development for hardware, Tarun enables aligned development with our software engineers while appreciating hardware&#x27;s differences from software.</li>
+                            <li class="memb_info_item">The world is full of products people don&#x27;t need. He believes that a good product can be designed and engineered only by the team that has the right skills in the most crucial aspects of product development- business strategy, design, engineering, embedded. Lack of expertise in one of those areas arguably leads to a compromised product, that is made up out of schedule and out of budget.</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div id="w-node-fa161387-7071-f30a-f0c0-944731dc7ef7-96728eaa" class="team_item_wrap team_item_right">
+                      <div class="member_landscape mb_30 wow animate__animated animate__fadeInUp"><img src="images/aditya-min.png" loading="lazy" sizes="(max-width: 767px) 92vw, 530px" srcset="images/aditya-min-p-500.png 500w, images/aditya-min.png 532w" alt="" class="member_img member_landscape_img">
+                        <div class="memb_desc_wrap">
+                          <div class="member_name">Aditya Arora</div>
+                          <ul role="list" class="memd_desc_info">
+                            <li class="memb_info_item">Aditya earned his Bachelor’s Degree in Mechanical Engineering specializing in machine design and control systems from Purdue University, Indiana.</li>
+                            <li class="memb_info_item">He has played a key role in the early development of several product iterations at Presso, a Silicon Valley venture-backed robotics startup developing disruptive technology in robotic garment processing.</li>
+                            <li class="memb_info_item">He has overseen manufacturing operations and led product design, engineering validation testing and new product introduction projects with major contract manufacturers across Southern California.</li>
+                            <li class="memb_info_item">He is overseeing the expansion of eLogicTech into engineering services in the areas of electronics&amp; embedded systems design, mechanical &amp; industrial design and product development.</li>
+                            <li class="memb_info_item">He is passionate about empowering and contributing to collaborative development of engineering technologies to solve business challenges and improve human life.</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="member_potrait no_margin wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"><img src="images/raja-min.png" loading="lazy" alt="" class="member_img">
+                        <div class="memb_desc_wrap">
+                          <div class="member_name">Rajasekharan NK</div>
+                          <ul role="list" class="memd_desc_info">
+                            <li class="memb_info_item">Rajasekharan NK has over forty years of industry experience in Research &amp; Development, Tech Support, Sales &amp; Marketing, Project Management, and Business Development in the fields of:<br>    a. Electronic test and measurement,<br>    b. Computers &amp;Networking,<br>    c. Data Communication and Telecommunication.</li>
+                            <li class="memb_info_item">He completed his Master’s of Technology in Electronics from Philips International Institute, Netherlands.</li>
+                            <li class="memb_info_item">He has been a business development advisor and advisory board member in several companies such as SIMYOG Technologies and has founded and headed electronics and embedded systems product companies such as Aural Networks, MRO-TEK and FON-ESS</li>
+                            <li class="memb_info_item">He has also served as the Managing Director of ETS-Lindgren Engineering India overseeing the Indian operations of the multinational company.</li>
+                            <li class="memb_info_item">He is a senior member of the IEEE-EMC Society and  member of the Society of EMC Engineers of India.</li>
+                            <li class="memb_info_item">His experience spans from Startup to multinational companies</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
           <div class="w-embed">
             <style>
   .memd_desc_info {
